Add plugin keywords

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "keywords": [
     "karma",
-    "preprocessor",
+    "karma-plugin",
+    "karma-preprocessor",
     "scripts"
   ],
   "author": "Karl Gyllstrom",
